[metadata]
name = icns
version = attr: icns.__version__
url = https://github.com/dgelessus/python-icns
author = dgelessus
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS 9
	Operating System :: MacOS :: MacOS X
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Multimedia :: Graphics :: Graphics Conversion
	Topic :: Multimedia :: Graphics :: Viewers
	Topic :: Utilities
	Typing :: Typed
license = MIT
license_files =
	LICENSE
description = A cross-platform Python library/tool for reading macOS ICNS icon images
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	icns
	icon
	mac
	macos
	macintosh

[options]
# mypy can only find type hints in the package if zip_safe is set to False,
# see https://mypy.readthedocs.io/en/latest/installed_packages.html#making-pep-561-compatible-packages
zip_safe = False
install_requires =
	kaitaistruct>=0.9
	Pillow>=5.0.0
python_requires = >=3.7
packages = find:

[options.package_data]
icns =
	py.typed

[options.packages.find]
include =
	icns
	icns.*

[options.entry_points]
console_scripts =
	pyicns = icns.__main__:main

[flake8]
extend-exclude =
	.mypy_cache/,
	build/,
	dist/,
	icns/_kaitai_struct/,

# The following issues are ignored because they do not match our code style:
ignore =
	E226, # missing whitespace around arithmetic operator
	E261, # at least two spaces before inline comment
	E501, # line too long
	W293, # blank line contains whitespace
	W503, # line break before binary operator

# flake8-tabs configuration
use-flake8-tabs = true
blank-lines-indent = always
indent-tabs-def = 1

[mypy]
files=icns/**/*.py
python_version = 3.7

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = True

no_implicit_optional = True

warn_unused_ignores = True
warn_unreachable = True

warn_redundant_casts = True

[mypy-icns._kaitai_struct.*]
# kaitai-struct-compiler does not generate type hints yet: https://github.com/kaitai-io/kaitai_struct/issues/675
ignore_errors = True
